--- a/client/src/pages/Landing/landing.module.css
+++ b/client/src/pages/Landing/landing.module.css
@@ -3,4 +3,43 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  min-height: 100vh;
+  position: relative;
+}
+
+.subContainer {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background: linear-gradient(90deg, rgba(108, 200, 0,0.3) 0%, rgba(0, 51, 87,0.3) 35%, rgba(255, 133, 0,0.3) 100%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.section{
+  width: 100%;
+  height: 80%;
+  padding: 15px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  color: white;
+
+}
+.title{
+  font-size: var(--main-text-title);
+  align-self: flex-start;
+  margin-left: 20px;
+  color: var(--main-two-color);
+  text-shadow: 
+    3px 3px 5px white,
+    -3px -3px 5px white,
+    3px -3px 5px white,
+    -3px 3px 5px white;
+  
+
+}
+.text{
+  font-size: var(--main-text-body-xl);
+  text-shadow: 2px 2px 4px var(--main-three-color), -2px -2px 4px var(--main-three-color);
 }
