--- a/client/src/pages/Home/home.module.css
+++ b/client/src/pages/Home/home.module.css
@@ -1,15 +1,20 @@
 
 .subcontainer{
   margin-top: 20px;
+  margin-bottom: 20px;
   display: grid;
   grid-template-columns: 350px auto;
   justify-content: space-between;
 
 }
-
+.containersection{
+  display: flex;
+  flex-direction: column;
+}
 .containercards{
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around; 
+ margin-top: 20px;
  
 }
