se agrega mas estilos y se corrigue un bug que sucedia cada vez que se almacenaba recipes

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,18 +1,18 @@
 :root {
-  --main-one-color : #7ce600;
+  --main-one-color : #528000;
   --second-one-color: #007342;
   --main-two-color: #FF8500;
   --second-two-color: rgba(255, 133, 0, 0.8);
-  --main-three-color: #6a00e6;
+  --main-three-color: #5300e6;
   --second-three-color: green;
   --main-four-color: #EFF0F2;
 
-  --main-text-color: rgb(110, 110, 110);
+  --main-text-color: #404040;
 
-  --main-text-title: 64px;
-  --main-text-subtitle: 36px;
-  --main-text-body-xl: 21px;
-  --main-text-body-md: 16px;
+  --main-text-title: 58.59px;
+  --main-text-subtitle: 30px;
+  --main-text-body-xl: 25px;
+  --main-text-body-md: 20px;
   --main-text-small: 12px;
   
 }
