--- a/client/src/pages/Home/Components/Card/components/Diet/diet.module.css
+++ b/client/src/pages/Home/Components/Card/components/Diet/diet.module.css
@@ -2,9 +2,9 @@
   margin-bottom: 5px;
   border-radius: 8px;
   padding: 3px 8px;
-  color: white;
-  font-family: 'Roboto',sans-serif;
-  background: var(--main-one-color);
+  color: #5300e6;
+  font-family: 'Rasa', serif;
+  background: #acff1a;
   font-size: var(--main-text-body-md);
   height: 35px;
 
