--- a/client/src/components/layout/Nav/nav.module.css
+++ b/client/src/components/layout/Nav/nav.module.css
@@ -15,7 +15,7 @@
   align-items: center;
 }
 .item{
-  color: white;
+  color: #efe5ff;
   text-decoration: none;
   display: flex;
   align-items: center;
