--- a/client/src/pages/Home/Components/Aside/aside.module.css
+++ b/client/src/pages/Home/Components/Aside/aside.module.css
@@ -6,11 +6,15 @@
  display: flex;
  flex-direction: column;
  align-items: center;
+ color: var(--main-three-color);
+ font-family: 'Neuton', serif;
+ font-size: var(--main-text-subtitle);
+ 
+
 }
 
 .containerselect{
   height: 200px;
-  border: 2px solid red;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
