--- a/client/src/pages/Home/Components/Card/card.module.css
+++ b/client/src/pages/Home/Components/Card/card.module.css
@@ -3,18 +3,17 @@
   flex-direction: column;
   height: 420px;
   width: 400px;
-  background-color: #E7E9EB;
   margin-bottom: 35px;
   border-radius: 15px;
-  border: 1px var(--main-one-color) solid;
+  background:#efe5ff ;
 
 }
 .container:hover{
   box-shadow:
-    1px 1px 15px var(--main-one-color),
-    1px -1px 15px var(--main-one-color),
-    -1px 1px 15px var(--main-one-color),
-    -1px -1px 15px var(--main-one-color);
+    1px 1px 10px rgba(108, 26, 255, 0.7),
+    1px -1px 10px rgba(108, 26, 255, 0.7),
+    -1px 1px 10px rgba(108, 26, 255, 0.7),
+    -1px -1px 10px rgba(108, 26, 255, 0.7);
   transition: 0.7s;
 }
 
@@ -23,6 +22,10 @@
   padding: 2px;
   margin-top: 10px;
   height: 35px;
+  font-family: 'Neuton', serif;
+  font-weight: 400;
+  color: var(--main-text-color);
+
 }
 
 .containerimage {
@@ -43,7 +46,7 @@
 .healthScore {
   width: 70px;
   height: 80px;
-  background: var(--main-one-color);
+  background: #acff1a;
   position: absolute;
   top: 30px;
   right: 25px;
@@ -53,7 +56,8 @@
   align-items: center;
   justify-content: center;
   border-radius: 15px;
-  color: white;
+  color: #5300e6;
+  font-family: 'Rasa', serif;
 
 }
 
@@ -63,18 +67,19 @@
   position: absolute;
   left: -400px;
   top: 400px;
-  background: var(--second-two-color);
+  background: rgba(108, 26, 255, 0.7);
   border-radius: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
   cursor: pointer;
+  color:#bfff4d;
 
 }
 
 .backhover h2 {
   font-size: var(--main-text-subtitle);
-  color: white;
+ 
 }
 
 .number {
