--- a/client/src/pages/Home/Components/SearchBar/searchBar.module.css
+++ b/client/src/pages/Home/Components/SearchBar/searchBar.module.css
@@ -1,4 +1,12 @@
 .container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.btn{
+  
+}
+.subcontainer{
  display: flex;
  justify-content: center;
  align-items: center;
